--- a/styles/style.css
+++ b/styles/style.css
@@ -409,3 +409,27 @@ nav a {
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
+.form-step {
+  display: none;
+}
+.form-step.active {
+  display: block;
+  animation: fadeIn 0.5s;
+}
+
+.input-disabled {
+  background-color: #f3f4f6; /* Cinza claro */
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+  display: none;
+  margin-top: 3px;
+}
+input.invalid {
+  border: 1px solid red;
+}
